--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Bakhtiyor",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^3.2.6",
