--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "prettierrc": "^0.0.0-5",
     "uuid": "^9.0.0"
   }
 }
