--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "prettierrc": "^0.0.0-5",
+    "socket.io": "^2.3.0",
     "uuid": "^9.0.0"
   }
 }
