--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "papay",
+  "name": "ultragear",
   "version": "1.0.0",
   "description": "bu bizning delivery loyihamiz",
   "main": "server.js",
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "train": "nodemon train.js",
+    "start:prod": "node server.js && NODE_ENV=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bakhtiyor",
