--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,3 +20,17 @@ jobs:
         node-version: '18'
     - name: Install Dependencies 
       run: npm install
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'
+    - name: Install Dependencies 
+      run: npm install
+    - name: Deploy to Production
+      run: ./deploy.sh
