--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -32,5 +32,7 @@ jobs:
         node-version: '18'
     - name: Install Dependencies 
       run: npm install
+    - name: Install pm2
+      run: npm install -g pm2
     - name: Deploy to Production
       run: ./deploy.sh
