--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'
+        node-version: '16'
     - name: Install Dependencies 
       run: npm install
   deploy:
@@ -29,10 +29,13 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'
+        node-version: '16'
     - name: Install Dependencies 
       run: npm install
     - name: Install pm2
       run: npm install -g pm2
-    - name: Deploy to Production
-      run: ./deploy.sh
+    - name: Build and run Docker containers
+      run: |
+        docker-compose up -d --build
+    - name: Stop and remove Docker containers
+      run: docker-compose down
