--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^2.0.0",
+    "axios": "^1.6.3",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
@@ -26,9 +27,11 @@
     "mongodb": "^3.2.6",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
+    "node-telegram-bot-api": "^0.64.0",
     "nodemon": "^2.0.20",
     "pm2": "^5.3.0",
     "prettierrc": "^0.0.0-5",
+    "request-ip": "^3.3.0",
     "socket.io": "^2.3.0",
     "uuid": "^9.0.0"
   },
