--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   node:
     container_name: ultragear_backend
     restart: always
-    image: node:16.10.0
+    image: node:lts
     ports:
       - 3003:3003
     volumes:
